force-app/main/default/objects/sc_ext__Connection__c/fields/sc_ext__Connection_Group__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Connection_Group__c</fullName>
    <label>Connection Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>