force-app/main/default/objects/sc_ext__Connection__c/fields/sc_ext__Description__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>